[package]
name = "socrates-core"
version = "0.1.0"
authors = ["Magnus Hallin <mhallin@fastmail.com>"]
edition = "2018"

[dependencies]
socrates-ast = { path = "../socrates-ast" }
socrates-errors = { path = "../socrates-errors" }

log = "0.4"
fnv = "1.0.6"
itertools = "0.10.1"

[dev-dependencies]
env_logger = "0.8.4"
socrates-parser = { path = "../socrates-parser" }
