[package]
name = "socrates-parser"
version = "0.1.0"
authors = ["Magnus Hallin <mhallin@fastmail.com>"]
build = "build.rs"

[dependencies]
socrates-ast = { path = "../socrates-ast" }
socrates-errors = { path = "../socrates-errors" }

lalrpop-util = "0.16"
regex = "1.0"

[build-dependencies]
lalrpop = "0.16"
